--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         <img src="img/IMG_7604.JPG" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Vo iu</h3>
-          <h5 id="wishText">I love you very muchhhhh!!!</h5>
+          <h5 id="wishText">Thank you for being in my life and for loving me. I’m really grateful you’ve been by my side — you always make me feel loved, valued, and cared for.
+
+              I hope you keep loving me and spoiling me a little (a lot) 😌 And I hope you get crazy rich and successful… so I can stay your spoiled baby forever 💗
+
+              Love you, Kathie.
+          </h5>
         </div>
       </div>
       <div class="seven">
